force-app/main/default/objects/Field_and_Its_Visibility_Type__mdt/Field_and_Its_Visibility_Type__mdt.object-meta.xml
<CustomObject>
    <label>Field and Its Visibility Type</label>
    <pluralLabel>Field and Its Visibility Types</pluralLabel>
</CustomObject>