force-app/main/default/objects/Field_and_Its_Visibility_Type__mdt/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ProgressBar</fullName>
                <default>true</default>
                <label>ProgressBar</label>
            </value>
            <value>
                <fullName>DefaultFieldView</fullName>
                <isActive>false</isActive>
                <label>DefaultFieldView</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>