force-app/main/default/objects/Field_and_Its_Visibility_Type__mdt/fields/Order_of_Fields_to_Display__c.field-meta.xml
<CustomField>
    <fullName>Order_of_Fields_to_Display__c</fullName>
    <inlineHelpText>0 will be the highest priority</inlineHelpText>
    <label>Order of Fields to Display</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>