force-app/main/default/objects/Field_and_Its_Visibility_Type__mdt/fields/Show_on_Screen__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Screen__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show on Screen?</label>
    <type>Checkbox</type>
</CustomField>